finished first tutorial

--- a/1.IntroToR/index.Rmd
+++ b/1.IntroToR/index.Rmd
@@ -159,31 +159,152 @@ a = 4
 a
 ```
 
+```{r eval=FALSE}
+fruit <- c("apples", "pears", "strawberries")
+```
+
 
 ---
 
 ## Data
 
+There are several ways to import data into your R environment:
+
+```{r eval=FALSE}
+# Built into R
+read.csv()
+read.delim()
+read.table()
+
+# rio package
+library(rio)
 import()
-using data from package
+
+# Base datasets (often used in examples)
+library(datasets)
+mtcars
+```
 
 ---
 
-## Viewing , summarizing, ec
+## Viewing , summarizing, etc
 
---- 
+```{r eval=FALSE}
+mtcars
+View(mtcars)
+head(mtcars)
+```
 
-## Basic math
+```{r eval=FALSE}
+mtcars[1,]
+mtcars[,1]
+mtcars$mpg # beacause mtcars is a dataframe!
+```
 
 ---
 
-## Simple graph
+### What is a dataframe?
 
-(can mention ggplot coming soon)
+Sort of like a spreadsheet in Excel, except more fun.
+- header contains column names
+- note, most functions like to work with dataframes, but others like matrices
+- Similar, but different object type
+- can generally coerce using
+```{r eval=FALSE}
+as.data.frame()
+as.matrix()
+```
 
 ---
 
-## Saving/workflow
+### DIY Dataframe
+
+Note, I rarely do this. Likely you will be pulling data from another source.
+
+```{r}
+metallicaNames <- c("Lars", "James", "Kirk", "Rob")
+metallicaAges <- c(47, 47, 48, 46)
+metallica_data <- data.frame(Name = metallicaNames, Age = metallicaAges)
+```
+```{r}
+metallica_data$Age
+mean(metallica_data$Age)
+```
+
+---
+
+### Subsetting data
+
+```{r}
+metallica_data$Age >= 47
+
+older_band_members <- metallica_data[metallica_data$Age >= 47,]
+
+# OR use subset (a bit more intuitive)
+older_band_members <- subset(metallica_data, Age >= 47)
+
+```
+
+---
+
+## R Commander
+
+- GUI interface
+- If you are an SPSS user, it may feel more familiar
+- I don't like it (it used to crash my computer)
+
+---
+
+## Saving
+
+If you did some data manipulation and would like to save it as a new file:
+```{r eval=FALSE}
+write.table()
+write.csv(metallica_data, "MetallicaData.csv") # note it will save in your wd
+```
+
+Save the R file, **DON'T** save the R workspace
+
+Can also make a `project` - helpful for saving the working directory, dataframes, etc.
+
+---
+
+## Brief introduction to graphs and `ggplot2`
+
+```{r}
+hist(mtcars$mpg)
+```
+
+---
+
+```{r}
+plot(mtcars$mpg, mtcars$disp)
+```
+
+---
+
+```{r eval=FALSE}
+install.packages("ggplot2")
+```
+
+```{r message=FALSE}
+library(ggplot2)
+```
+
+
+```{r}
+plot <- ggplot(data = mtcars, aes(mpg, disp))
+plot + geom_point()
+```
+
+---
+```{r}
+plot + geom_point() + ggtitle("This is my awesome graph")
+```
+
+Note that the `plot` object isn't updating unless it is reassigned
+
+Read Ch 4 for some more examples.
 
 ---
 
@@ -194,6 +315,8 @@ Wikipedia:
 
 A (very) short introduction to R: 
 [https://cran.r-project.org/doc/contrib/Torfs+Brauer-Short-R-Intro.pdf](https://cran.r-project.org/doc/contrib/Torfs+Brauer-Short-R-Intro.pdf)
+
+Field A, Miles J, Field Z. Discovering Statistics Using R. London: Sage; 2012.
 
 ---
 
